refactor: has discount check to Boolean equals