@@ -3,7 +3,6 @@ package hoomgroom.product.product.util;
 import hoomgroom.product.product.model.Product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class DiscountFilter extends SearchFilter {
     Boolean hasDiscount;
@@ -14,13 +13,13 @@ public class DiscountFilter extends SearchFilter {
 
     @Override
     public List<Product> filter(List<Product> products) {
-        if (!hasDiscount) {
+        if (Boolean.FALSE.equals(hasDiscount)) {
             return filterNext(products);
         }
 
         List<Product> filteredProducts = products.stream()
                 .filter(product -> product.getDiscountPercentage() != 0)
-                .collect(Collectors.toList());
+                .toList();
 
         return filterNext(filteredProducts);
     }
